--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -6,12 +6,13 @@
       <div class='row'>
         <div class='col-md-2'>Filter by:</div>
         <div class='col-md-4'>
-          <input type='text' />
+          <input type='text'
+                  [(ngModel)] = 'listFilter' />
         </div>
       </div>
       <div class='row'>
         <div class='col-md-6'>
-          <h4>Filtered by: </h4>
+          <h4>Filtered by: {{listFilter}}</h4>
         </div>
       </div>
       <div class='table-responsive'>
@@ -20,8 +21,10 @@
           <thead>
             <tr>
               <th>
-                <button class='btn btn-primary'>
-                  Show Image
+                <!-- Event Binding - info sent to component from template -->
+                <button class='btn btn-primary'
+                (click)='toggleImage()'>
+                  {{showImage ? 'Hide' : 'Show'}} Image
                 </button>
               </th>
               <th>Product</th>
@@ -36,15 +39,18 @@
               iterates repeats a portion of DOM tree once for each item in an iterable list -->
             <tr *ngFor='let product of products'>   
               <td>
-                <img [src]='product.imageUrl'
-                      [title]='product.productName'
+                <!-- property binding -->
+                <img *ngIf='showImage'
+                      [src]='product.imageUrl'   
+                      [title]='product.productName' 
                       [style.width.px]='imageWidth'
                       [style.height.px]='imageMargin'>
               </td>
               <td>{{ product.productName }}</td>
-              <td>{{ product.productCode }}</td>
+              <!-- added pipes - lowercase and currency -->
+              <td>{{ product.productCode | lowercase}}</td>
               <td>{{ product.releaseDate }}</td>
-              <td>{{ product.price }}</td>
+              <td>{{ product.price | currency: 'USD':'symbol':'1.2-2'}}</td>
               <td>{{ product.starRating }}</td>
             </tr>
           </tbody>
